[tool.poetry]
name = "aiopathlib"
version = "0.5.0"
description = "Pathlib support for asyncio"
authors = ["Waket Zheng <waketzheng@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/waketzheng/aiopathlib"
repository = "https://github.com/waketzheng/aiopathlib"
keywords = ["aiopathlib", "asyncpath", "aiopath"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: POSIX",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Framework :: AsyncIO",
]
include = ["LICENSE", "README.md"]

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"
mypy = "^0.910"
bandit = "^1.7.0"
flake8 = "^3.9.2"
types-aiofiles = "^0.1.9"
pytest-asyncio = "^0.15.1"
coverage = "^5.5"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 88
py38 = true
exclude = '''
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
'''

[tool.isort]
profile = "black"
known_third_party = "aiofiles"
skip = "build,.tox,.venv,.git,.pytest_cache,.mypy_cache"
multi_line_output = 5
include_trailing_comma = true
force_grid_wrap = 0
force_single_line = false
balanced_wrapping = true
use_parentheses = true

[tool.coverage]
    [tool.coverage.report]
    include = ['aiopathlib/*']

[tool.tox]
legacy_tox_ini = """
[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310

[tox]
envlist = py38, py39, py310
isolated_build = True

[testenv]
commands =
    pip install -r dev_requirements.txt
    coverage run --source aiopathlib -m pytest tests
passenv = CI
"""

[tool.mypy]
disable_error_code = "override"
